--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1"
   },
