fix code with linter

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     ]
   },
   "prettier": {
-    "singleQuote": false
+    "singleQuote": false,
+    "endOfLine": "crlf"
   },
   "browserslist": {
     "production": [
