save images in the state (+ some lint fixes)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
   },
   "prettier": {
     "singleQuote": false,
-    "endOfLine": "crlf"
+    "endOfLine": "crlf",
+    "linebreak-style": 0
   },
   "browserslist": {
     "production": [
