--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,18 @@
         "html",
         "javascript",
         "javascriptreact"
-    ]
-},
-"editor.codeActionsOnSave": {
-    "source.fixAll": true,
-    "source.fixAll.eslint": true
+    ],
+    "editor.codeActionsOnSave": {
+        "source.fixAll": true,
+        "source.fixAll.eslint": true
+    },
+    "python.linting.pycodestyleEnabled": true,
+    "python.linting.pycodestyleArgs": {
+        "--max-line-length=88"
+    },
+    "python.linting.pylintEnabled": true,
+    "python.formatting.provider": "black",
+    "[python]": {
+        "editor.formatOnSave": true
+    }
 }
